kubernetes/apps/ollama/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: ollama-ingress
  namespace: llm
  annotations:
    external-dns.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`llm.sobrinho.pt`)
      kind: Rule
      services:
        - name: ollama
          port: main
  tls:
    secretName: ollama-cert
